syntax = "proto3";

package grocery;

// ------------------------------------------------------------
// Enums required by specification
// ------------------------------------------------------------

// Type of request coming from Ordering to Inventory
enum RequestType {
  GROCERY_ORDER = 0;
  RESTOCK_ORDER = 1;
}

// Reply status codes from Inventory back to Ordering
enum ReplyCode {
  OK = 0;
  BAD_REQUEST = 1;
}

// ------------------------------------------------------------
// Request and Reply messages (Ordering <-> Inventory)
// ------------------------------------------------------------

message OrderRequest {
  RequestType request_type = 1;   // GROCERY_ORDER or RESTOCK_ORDER
  string id = 2;                  // customer_id or supplier_id
  map<string, int32> items = 3;   // item_name -> quantity
}

message OrderReply {
  ReplyCode code = 1;             // OK or BAD_REQUEST
  string message = 2;             // human-readable message
}

// ------------------------------------------------------------
// Robot -> Inventory messages (Milestone 2)
// ------------------------------------------------------------

enum RobotStatus {
  ROBOT_OK = 0;
  ROBOT_NOOP = 1;
  ROBOT_ERROR = 2;
}

message RobotResult {
  string request_id = 1;  // unique id assigned by Inventory when publishing work
  string served_id = 2;   // customer_id or supplier_id being served
  string robot_name = 3;  // bread/dairy/meat/produce/party
  RobotStatus status = 4; // OK/NOOP/ERROR
  string message = 5;     // debug details
}

message Ack {
  bool ok = 1;
  string message = 2;
}

// ------------------------------------------------------------
// Pricing messages
// ------------------------------------------------------------

message PriceRequest {
  map<string, int32> items = 1;  // item_name -> quantity
}

message ItemPrice {
  string name = 1;
  int32 quantity = 2;
  double unit_price = 3;
  double subtotal = 4;
}

message PriceReply {
  ReplyCode code = 1;
  string message = 2;
  repeated ItemPrice item_prices = 3;
  double total = 4;
}

// ------------------------------------------------------------
// gRPC services
// ------------------------------------------------------------

service InventoryService {
  rpc SubmitOrder (OrderRequest) returns (OrderReply);
  rpc ReportRobotResult (RobotResult) returns (Ack);
}

service PricingService {
  rpc GetPrice (PriceRequest) returns (PriceReply);
}
